# corprecon

./: .env.example  .gitignore  README.md  pyproject.toml
corprecon/: __init__.py  cli.py  crosser.py  models.py
corprecon/sources/: annuaire.py  insee.py
examples/: demo.py
tests/: test_crosser.py  test_models.py
